--- a/home.html
+++ b/home.html
@@ -408,7 +408,7 @@
                                                   <a href="#" class="room_vip-name">
                                                     Phòng đơn vip
                                                   </a>
-                                                  <a href="" class="room_vip-price">   3.000.000₫/Đêm</a>
+                                                  <a href="" class="room_vip-price">3.000.000₫/Đêm</a>
                                                  
                                                 </section>
                                             </article>
@@ -419,6 +419,63 @@
                                 </section>
                             </div>
                            
+                        </div>
+                    </section>
+                </section>
+            </section>
+            <section class="room_news">
+                <section class="wrapper">
+                    <h2 class="room_news-title">Tin tức </h2>
+                    <section class="room_news-content">
+                        <div class="row">
+                            <div class="col">
+                                <article>
+                                    <a class="news_avatar" href=""><img src="./view/image/10-xu-huong-thinh-hanh-trong-nganh-khach-san-2021.webp" alt=""></a>
+                                    <section class="news_content">
+                                        <a href="" class="news_content-title"><h3 >10 xu hướng thịnh hành trong nghành khách sạn 2022</h3></a>
+                                        <span class="news_content-description">
+                                            Không gian ngoài trời mở rộng hơn, nâng cấp công nghệ để hạn chế tối đa tiếp xúc là những xu hướng mới nhiều khách...
+                                        </span>
+                                        <section class="news_content-origin">
+                                            <span class="news_content-author">By Bean hotel</span>
+                                            <span class="news_cotent-creatednews">6/12/2022</span>
+                                        </section>
+                                        <a href=""><button class="new_content-readmore">Đọc thêm</button></a>
+                                    </section>
+                                </article>
+                            </div>
+                            <div class="col">
+                                <article>
+                                    <a class="news_avatar" href=""><img src="./view/image/10-xu-huong-thinh-hanh-trong-nganh-khach-san-2021.webp" alt=""></a>
+                                    <section class="news_content">
+                                        <a href="" class="news_content-title"><h3 >10 xu hướng thịnh hành trong nghành khách sạn 2022</h3></a>
+                                        <span class="news_content-description">
+                                            Không gian ngoài trời mở rộng hơn, nâng cấp công nghệ để hạn chế tối đa tiếp xúc là những xu hướng mới nhiều khách...
+                                        </span>
+                                        <section class="news_content-origin">
+                                            <span class="news_content-author">By Bean hotel</span>
+                                            <span class="news_cotent-creatednews">6/12/2022</span>
+                                        </section>
+                                        <a href=""><button class="new_content-readmore">Đọc thêm</button></a>
+                                    </section>
+                                </article>
+                            </div>
+                            <div class="col">
+                                <article>
+                                    <a class="news_avatar" href=""><img src="./view/image/10-xu-huong-thinh-hanh-trong-nganh-khach-san-2021.webp" alt=""></a>
+                                    <section class="news_content">
+                                        <a href="" class="news_content-title"><h3 >10 xu hướng thịnh hành trong nghành khách sạn 2022</h3></a>
+                                        <span class="news_content-description">
+                                            Không gian ngoài trời mở rộng hơn, nâng cấp công nghệ để hạn chế tối đa tiếp xúc là những xu hướng mới nhiều khách...
+                                        </span>
+                                        <section class="news_content-origin">
+                                            <span class="news_content-author">By Bean hotel</span>
+                                            <span class="news_cotent-creatednews">6/12/2022</span>
+                                        </section>
+                                        <a href=""><button class="new_content-readmore">Đọc thêm</button></a>
+                                    </section>
+                                </article>
+                            </div>
                         </div>
                     </section>
                 </section>
