--- a/myviethotel.html
+++ b/myviethotel.html
@@ -76,7 +76,7 @@
             <h3 class="my_hotel-title">
                 Về chúng tôi
             </h3>
-            <div class="mu_hotel-content">
+            <div class="my_hotel-content">
                 <p>Là khách sạn 5 sao đẳng cấp quốc tế, tọa lạc tại giao điểm của bốn quận chính, nơi được xem như trái tim
                     và trung tâm của TP. Hồ Chí Minh.</p>
                 
@@ -101,7 +101,7 @@
                 <p>Đến với <strong>Viet Hotel</strong> là đến với sư tinh tế nhất về chất lượng, dịch vụ và sự thân thiện như chính ngôi nhà
                     của bạn. <br></p>
 
-               <h2> HÃY ĐẾN <strong>Viet Hotel</strong> ĐỂ TRẢI NGHIỆM SỰ KHÁC BIỆT!</h2>
+               <p> HÃY ĐẾN <strong>Viet Hotel</strong> ĐỂ TRẢI NGHIỆM SỰ KHÁC BIỆT!</p>
             </>
         </div>
 
