--- a/thuvienanh.html
+++ b/thuvienanh.html
@@ -7,10 +7,14 @@
     <title>Thư Viện Ảnh</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap"
+        rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,200;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,200;1,300;1,400;1,500;1,600&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./public/base.css">
     <link rel="stylesheet" href="./public/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -34,8 +38,8 @@
                             </li>
                             <li class="list_room-item">
                                 <a class="menu_room" href="">Phòng <i class="fa-solid fa-angle-down"></i>
-                                        
-                                    </a>
+
+                                </a>
                                 <nav class="todolist_room">
                                     <a href="">Phòng đơn</a><a href="">Phòng khách</a><a href="">Phòng Vip</a>
                                 </nav>
@@ -49,11 +53,11 @@
                     </section>
                     <nav>
                         <a href="" class="header_top-user">
-                                        Đăng ký
-                            </a>
+                            Đăng ký
+                        </a>
                         <a href="" class="header_top-user">
-                                   Đăng nhập
-                            </a>
+                            Đăng nhập
+                        </a>
                     </nav>
                 </section>
 
@@ -68,11 +72,10 @@
                 <i class="fa-solid fa-angle-right"></i>
                 <a href="">Thư viện ảnh</a>
             </div>
-
         </section>
         <section class="library">
             <section class="room">
-                <div class="wrapper">
+                <div class="wrapper wrapper1">
                     <h2 class="library_title">Thư Viện Ảnh</h2>
                     <span></span>
                     <div class="row">
@@ -155,7 +158,8 @@
                 <section class="footer_item footer_item-address">
                     <h3>Địa chỉ</h3>
                     <ul class="footer_item-list">
-                        <li class="footer_list-item"><a href="" class="footer_item-text">Trịnh Văn Bô, Cầu Giấy, Hà Nội</a></li>
+                        <li class="footer_list-item"><a href="" class="footer_item-text">Trịnh Văn Bô, Cầu Giấy, Hà
+                                Nội</a></li>
                         <li class="footer_list-item"><a href="" class="footer_item-text">Twiter</a></li>
                     </ul>
                 </section>
