--- a/lienhe.html
+++ b/lienhe.html
@@ -71,11 +71,11 @@
         <section class="library">
             <section class="room">
                 <div class="wrapper">
-                    <h2 class="library_title">Liên Hệ</h2>
                     <section class="form">
+                        <h2 class="library_title">Liên Hệ</h2>
                         <P>Bạn hãy điền nội dung tin nhắn vào form dưới đây và gửi cho chúng tôi. </P>
                         <p>Chúng tôi sẽ trả lời bạn sau khi nhận được.</p>
-                        <form>
+                        <form class="form--lienhe">
                             <input type="text" name="ho-ten" placeholder="Họ và tên *">
                             <input type="email" name="email" placeholder="Email *">
                             <textarea name="noi-dung" placeholder="Nội dung *"></textarea>
