--- a/admin/lkphong.html
+++ b/admin/lkphong.html
@@ -83,24 +83,31 @@
 
                     </section>
                     <section class="admin-column_right">
-                        <h2 class="admin-column_right--title">Danh Mục</h2>
-                        <span class="admin-column_right--linked"><b>Danh Mục</b> - Danh sách loại dang mục</span>
+                        <h2 class="admin-column_right--title">Phòng</h2>
+                        <span class="admin-column_right--linked"><b>Phòng</b> - Danh sách phòng</span>
                         <div class="table table-category">
-                            <a href="./index.php?act=themdm"><input style="margin-bottom: 2rem;" type="button"
-                                    name="them" value="Thêm danh mục sản phẩm"></a>
+                            <a href="?act=them&page=phong"><input style="margin-bottom: 2rem;" type="button"
+                                    name="them" value="Thêm Phòng"></a>
                             <table>
                                 <tr>
                                     <th></th>
-                                    <th>Mã Loại</th>
-                                    <th>Tên Loại</th>
+                                    <th>Tên Phòng</th>
+                                    <th>Diện Tích</th>  
+                                    <th>Khách Hàng</th>
+                                    <th>Giá</th>
+                                    <th>Số Lượng</th>
+                                    <th>Trạng Thái</th>
                                     <th>Hành Động</th>
                                 </tr>
                                 <tr>
                                     <th><input type="checkbox" name="check_ml"></th>
-                                    <th class="id">1</th>
-                                    <th>Phòng Vip</th>
+                                    <th class="id">Phòng Bình Dân</th>
+                                    <th class="id">30 m<sup>2</sup></th>
+                                    <th class="id">Khách Hàng</th>
+                                    <th>8.000.000 đ</th>
+                                    <th>4</th>
                                     <th>
-                                        <a href="./index.php?act=suadm&id=<?php echo $list[" id_danhmuc"]?><input
+                                        <a href=""><input
                                                 type="button" name="sua" value="Sửa"></a>
                                         <a class="remove" href="./index.php?act=lkdm"><input type="button" name="xoa"
                                                 value="Xóa"></a>
