--- a/admin/lkphong.html
+++ b/admin/lkphong.html
@@ -103,9 +103,17 @@
                                     <th><input type="checkbox" name="check_ml"></th>
                                     <th class="id">Phòng Bình Dân</th>
                                     <th class="id">30 m<sup>2</sup></th>
-                                    <th class="id">Khách Hàng</th>
+                                    <th class="id">
+                                        <section>
+                                            Số lượng người lớn : <strong>5</strong>
+                                            <br>
+                                            Số lượng trẻ em : <strong>2</strong>
+                                        </section>
+                                    </th>
                                     <th>8.000.000 đ</th>
                                     <th>4</th>
+                                    <th><a href=""><input
+                                        type="button" name="sua" value="Hoạt Động"></a></th>
                                     <th>
                                         <a href=""><input
                                                 type="button" name="sua" value="Sửa"></a>
