--- a/html_view/phongchitiet.html
+++ b/html_view/phongchitiet.html
@@ -10,11 +10,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="public/base.css">
-    <link rel="stylesheet" href="public/style.css">
+    <link rel="stylesheet" href="../public/base.css">
+    <link rel="stylesheet" href="../public/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="public/style.css">
-    <link rel="stylesheet" href="public/style1.css">
+    <link rel="stylesheet" href="../public/style.css">
+    <link rel="stylesheet" href="../public/style1.css">
 </head>
 
 <body>
@@ -71,22 +71,22 @@
             </div>
         </section>
         <div class="banner_room">
-            <img id="slideshow" src="public/image/bannerphong_chitiet/anh1.webp">
+            <img id="slideshow" src="../public/image/bannerphong_chitiet/anh1.webp">
             <h2>Phòng đơn tiêu chuẩn</h2>
         </div>
         <div class="room_content_main">
             <div class="room_content_main_left">
                 <div class="tag_info_room">
                     <div class="item_tag_info">
-                        <img src="public/image/people.webp" alt="">
+                        <img src="../public/image/people.webp" alt="">
                         <span> 02 Người lớn</span>
                     </div>
                     <div class="item_tag_info">
-                        <img src="public/image/people.webp" alt="">
+                        <img src="../public/image/people.webp" alt="">
                         <span> 02 Người lớn</span>
                     </div>
                     <div class="item_tag_info">
-                        <img src="public/image/people.webp" alt="">
+                        <img src="../public/image/people.webp" alt="">
                         <span> 02 Người lớn</span>
                     </div>
                 </div>
@@ -103,15 +103,15 @@
                     </div>
                     <div class="box_services">
                         <div class="item_services">
-                            <img src="public/image/tag_icon_4.svg" alt="">
+                            <img src="../public/image/tag_icon_4.svg" alt="">
                             <span>Cà Phê Buổi Sáng</span>
                         </div>
                         <div class="item_services">
-                            <img src="public/image/tag_icon_4.svg" alt="">
+                            <img src="../public/image/tag_icon_4.svg" alt="">
                             <span>Bồn Tắm Hoa Sen</span>
                         </div>
                         <div class="item_services">
-                            <img src="public/image/tag_icon_5.svg" alt="">
+                            <img src="../public/image/tag_icon_5.svg" alt="">
                             <span>Internet Không Dây</span>
                         </div>
                     </div>
@@ -176,21 +176,21 @@
             </div>
             <div class="productRelate_left">
                 <section class="room">
-                    <div class="wrapper">
+                    <div style="margin: 0;" class="wrapper">
                         <!-- <h2 class="room_title">Phòng</h2> -->
                         <!-- <span></span> -->
                         <div class="row">
                             <div class="col">
                                 <article>
-                                    <a href=""> <img class="room_img" src="public/image/anh1.webp" alt=""></a>
+                                    <a href=""> <img class="room_img" src="../public/image/anh1.webp" alt=""></a>
                                     <a href="" class="room_name">
                                         <h2 class="room_name">Phòng đơn tiêu chuẩn</h2>
                                     </a>
                                     <span class="room_line"></span>
                                     <section class="room_service">
-                                        <img src="public/image/Không có tiêu đề.png" alt="">
-                                        <img src="public/image/tag_icon_4.svg" alt="">
-                                        <img src="public/image/tag_icon_5.svg" alt="">
+                                        <img src="../public/image/Không có tiêu đề.png" alt="">
+                                        <img src="../public/image/tag_icon_4.svg" alt="">
+                                        <img src="../public/image/tag_icon_5.svg" alt="">
                                     </section>
                                     <section class="room_information">
                                         <span class="room_guest">02 khách</span>
@@ -207,15 +207,15 @@
                             </div>
                             <div class="col">
                                 <article>
-                                    <a href=""> <img class="room_img" src="public/image/anh1.webp" alt=""></a>
+                                    <a href=""> <img class="room_img" src="../public/image/anh1.webp" alt=""></a>
                                     <a href="" class="room_name">
                                         <h2 class="room_name">Phòng đơn tiêu chuẩn</h2>
                                     </a>
                                     <span class="room_line"></span>
                                     <section class="room_service">
-                                        <img src="public/image/Không có tiêu đề.png" alt="">
-                                        <img src="public/image/tag_icon_4.svg" alt="">
-                                        <img src="public/image/tag_icon_5.svg" alt="">
+                                        <img src="../public/image/Không có tiêu đề.png" alt="">
+                                        <img src="../public/image/tag_icon_4.svg" alt="">
+                                        <img src="../public/image/tag_icon_5.svg" alt="">
                                     </section>
                                     <section class="room_information">
                                         <span class="room_guest">02 khách</span>
@@ -232,15 +232,15 @@
                             </div>
                             <div class="col">
                                 <article>
-                                    <a href=""> <img class="room_img" src="public/image/anh1.webp" alt=""></a>
+                                    <a href=""> <img class="room_img" src="../public/image/anh1.webp" alt=""></a>
                                     <a href="" class="room_name">
                                         <h2 class="room_name">Phòng đơn tiêu chuẩn</h2>
                                     </a>
                                     <span class="room_line"></span>
                                     <section class="room_service">
-                                        <img src="public/image/Không có tiêu đề.png" alt="">
-                                        <img src="public/image/tag_icon_4.svg" alt="">
-                                        <img src="public/image/tag_icon_5.svg" alt="">
+                                        <img src="../public/image/Không có tiêu đề.png" alt="">
+                                        <img src="../public/image/tag_icon_4.svg" alt="">
+                                        <img src="../public/image/tag_icon_5.svg" alt="">
                                     </section>
                                     <section class="room_information">
                                         <span class="room_guest">02 khách</span>
@@ -257,15 +257,15 @@
                             </div>
                             <div class="col">
                                 <article>
-                                    <a href=""> <img class="room_img" src="public/image/anh1.webp" alt=""></a>
+                                    <a href=""> <img class="room_img" src="../public/image/anh1.webp" alt=""></a>
                                     <a href="" class="room_name">
                                         <h2 class="room_name">Phòng đơn tiêu chuẩn</h2>
                                     </a>
                                     <span class="room_line"></span>
                                     <section class="room_service">
-                                        <img src="public/image/Không có tiêu đề.png" alt="">
-                                        <img src="public/image/tag_icon_4.svg" alt="">
-                                        <img src="public/image/tag_icon_5.svg" alt="">
+                                        <img src="../public/image/Không có tiêu đề.png" alt="">
+                                        <img src="../public/image/tag_icon_4.svg" alt="">
+                                        <img src="../public/image/tag_icon_5.svg" alt="">
                                     </section>
                                     <section class="room_information">
                                         <span class="room_guest">02 khách</span>
@@ -324,6 +324,9 @@
 
     </footer>
     <script src="style.js"></script>
+    <script>
+        
+    </script>
 </body>
 
 </html>
