--- a/html_view/thuvienanh.html
+++ b/html_view/thuvienanh.html
@@ -167,6 +167,10 @@
         </div>
 
     </footer>
+    <script>
+       let date = new Date();
+      console.log(date.getTime())
+    </script>
 </body>
 
 </html>
